--- a/index.html
+++ b/index.html
@@ -10,40 +10,28 @@
 
 </head>
 
-
 <body>
-
     <main>
-
         <section class="home">
-
             <header>
-
                 <nav>
-
                     <img src="img/Logo.png" alt="Logo da nossa loja">
 
-                    <h1>Doces Lunares</h1>
+                    <h1>DOCES LUNARES</h1>
 
                     <ul>
 
-                        <li><a href="#"><img src="img/Lupa.png" alt="Whatsapp "> <span>Peça no Zap</span></a></li>
                         <li><a href="#"><img src="img/Cesta.png" alt="Carrinho "> <span>Carrinho</span></a></li>
                         <li><a href="#"><img src="img/Lupa.png" alt="Pesquisar "> <span>Pesquisar</span></a></li>
-
+                        <li><a href="#"><img src="img/Lupa.png" alt="Whatsapp "> <span>Quem Somos?</span></a></li>
                     </ul>
 
                 </nav>
 
                 <img src="img/banner-abertura.png" alt="banner de promoções e novidades" class="banner">
-
+    
             </header>
-
         </section>
-
     </main>
-
-
 </body>
-
 </html>
