--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="col">
 
-                    <img src="img/Logo.png" alt="Logo">
+                    <img src="img/logo/Logo.png" alt="Logo">
 
                 </div>
 
