--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             </nav>
 
-            <div class="hero">
+            <div class="banner">
 
                 <img src="img/banner-abertura.png" alt="">
 
