--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav-footer.css">
 
+    <link rel="stylesheet" href="css/home.css">
+
 </head>
 
 <body>
@@ -34,9 +36,9 @@
 
                 <div class="col">
 
-                    <a href="#"><img src="img/icon-quem-somos.png" alt="">Quem somos</a>
-                    <a href="#"><img src="img/icon-carrinho.png" alt="">Carrinho</a>
-                    <a href="#"><img src="img/icon-pesquisar.png" alt="">Pesquisar</a>
+                    <a href="#"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                    <a href="#"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
+                    <a href="#"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
 
                 </div>
 
@@ -50,7 +52,7 @@
 
         </header>
 
-        <section class="home-produtos">
+        <section id="home-produtos">
 
             <section class="produtos">
 
@@ -252,7 +254,7 @@
 
                 <a href="#">
 
-                    <img src="img/Logo.png" alt="Logo">
+                    <img src="img/logo/Logo.png" alt="Logo">
 
                 </a>
 
@@ -277,9 +279,9 @@
                 <h4>Redes sociais</h4>
                 <div class="footer-sociais">
 
-                    <a href="#"><img src="img/Whats.png" alt="Contato atraves do WhatsApp"></a>
-                    <a href="#"><img src="img/Facebook.png" alt="Contato atraves do Facebook"></a>
-                    <a href="#"><img src="img/Insta.png" alt="Contato atraves do Inta"></a>
+                    <a href="#"><img src="img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
+                    <a href="#"><img src="img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
+                    <a href="#"><img src="img/icon/Insta.png" alt="Contato atraves do Inta"></a>
 
                 </div>
 
