--- a/produtos.html
+++ b/produtos.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/nav-footer.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/produtos.css">
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+
+
+
     <title>Produtos</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="nav">
+            <div class="col">
+                <img src="img/logo/Logo.png" alt="Logo">
+            </div>
+
+            <div class="col">
+                <h1>Doces Lunares</h1>
+            </div>
+            <div class="col">
+                <a href="#"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                <a href="#"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+            </div>
+        </nav>
+    </header>
+
+    <section>
+        <main id="produtos" class="col">
+
+            <div class="produtos-esquerda">
+                <h2>Filtro</h2>
+            </div>
+
+            <div class="produtos-meio">
+                <div class="titulo-produtos">
+                    <h2>TODOS</h2>
+                    <a href="#" class="botao"><img src="img/icon/icon-pesquisar.png" alt=""><input type="search"></a>
+                </div>
+
+                <div class="lista-produtos">
+
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        
+                    </div>
+
+                    <div class="item">
+                        <img src="img/produtos/ConeFerrero.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="produtos-direita">
+                <h2>Carrinho</h2>
+            </div>
+        </main>
+    </section>
 </body>
+
 </html>
