Atualização dos links nav e footer

--- a/produtos.html
+++ b/produtos.html
@@ -19,15 +19,15 @@
     <header>
         <nav class="nav">
             <div class="col">
-                <img src="img/logo/Logo.png" alt="Logo">
+                <a href="index.html"><img src="img/logo/Logo.png" alt="Logo"></a>
             </div>
 
             <div class="col">
                 <h1>Doces Lunares</h1>
             </div>
             <div class="col">
-                <a href="#"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
-                <a href="#"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+                <a href="#" class="botao"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                <a href="sobre.html" class="botao"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
             </div>
         </nav>
     </header>
