--- a/produtos.html
+++ b/produtos.html
@@ -36,27 +36,87 @@
         <main id="produtos" class="col">
 
             <div class="produtos-esquerda">
-                <h2>Filtro</h2>
+                <div class="titulo-filtro">
+                    <h2>Filtro</h2>
+                </div>
+                <ul>
+                    <li>TODOS<input type="checkbox" name="" id="cb-todos"></li>
+                    <li>Diet<input type="checkbox" name="" id="cb-diet"></li>
+                    <li>Mousse<input type="checkbox" name="" id="cb-mousse"></li>
+                    <li>Bolos<input type="checkbox" name="" id="cb-bolos"></li>
+                    <li>Tortas<input type="checkbox" name="" id="cb-tortas"></li>
+                    <!-- <li>Massas<input type="checkbox" name="" id="cb-"></li>
+                        <li>Cones<input type="checkbox" name="" id="cb-"></li>
+                        <li>De frutas<input type="checkbox" name="" id="cb-"></li>
+                        <li>Sorvetes<input type="checkbox" name="" id="cb-"></li>
+                        <li>Cookies<input type="checkbox" name="" id="cb-"></li>
+                        <li>Docinhos<input type="checkbox" name="" id="cb-"></li>
+                        <li>Especiais<input type="checkbox" name="" id="cb-"></li> -->
+                </ul>
             </div>
 
             <div class="produtos-meio">
                 <div class="titulo-produtos">
                     <h2>TODOS</h2>
-                    <a href="#" class="botao"><img src="img/icon/icon-pesquisar.png" alt=""><input type="search"></a>
+                    <span class="botao"><img src="img/icon/icon-pesquisar.png" alt=""><input type="search"></span>
                 </div>
 
                 <div class="lista-produtos">
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
 
                     <div class="item">
                         <img src="img/produtos/BoloPrestigio.png" alt="">
                         <p>Bolo de prestígio</p>
                         <p>R$ 7,50 / 100g</p>
-                        
+                        <button class="adicionar">Adicionar ao Carrinho</button>
                     </div>
 
                     <div class="item">
-                        <img src="img/produtos/ConeFerrero.png" alt="">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
                     </div>
+
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
+                    <div class="item">
+                        <img src="img/produtos/BoloPrestigio.png" alt="">
+                        <p>Bolo de prestígio</p>
+                        <p>R$ 7,50 / 100g</p>
+                        <button class="adicionar">Adicionar ao Carrinho</button>
+                    </div>
+
 
                 </div>
             </div>
@@ -66,6 +126,58 @@
             </div>
         </main>
     </section>
+
+    <footer class="footer">
+
+        <div class="col">
+
+            <a href="#">
+
+                <img src="img/logo/Logo.png" alt="Logo">
+
+            </a>
+
+        </div>
+
+        <div class="col">
+
+            <h4>Local</h4>
+            <p>Rua dos Doceiros <br> 14512-957</p>
+
+        </div>
+
+        <div class="col">
+
+            <h4>Contato</h4>
+            <p>(19)3636-3636 <br> (19)99999-9999</p>
+
+        </div>
+
+        <div class="col">
+
+            <h4>Redes sociais</h4>
+            <div class="footer-sociais">
+
+                <a href="#"><img src="img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
+                <a href="#"><img src="img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
+                <a href="#"><img src="img/icon/Insta.png" alt="Contato atraves do Inta"></a>
+
+            </div>
+
+        </div>
+
+        <div class="col">
+
+            <a href="sobre.html">
+                <h4>Quem somos</h4>
+            </a>
+
+        </div>
+
+    </footer>
+
 </body>
+
+
 
 </html>
