Alterações na página produtos
Base da janela Carrinho
Alterações em estilos
Alterações em filtros

--- a/produtos.html
+++ b/produtos.html
@@ -36,7 +36,7 @@
         <main id="produtos" class="col">
 
             <div class="produtos-esquerda">
-                <div class="titulo-filtro">
+                <div>
                     <h2>Filtro</h2>
                 </div>
                 <ul>
@@ -45,14 +45,17 @@
                     <li>Mousse<input type="checkbox" name="" id="cb-mousse"></li>
                     <li>Bolos<input type="checkbox" name="" id="cb-bolos"></li>
                     <li>Tortas<input type="checkbox" name="" id="cb-tortas"></li>
-                    <!-- <li>Massas<input type="checkbox" name="" id="cb-"></li>
-                        <li>Cones<input type="checkbox" name="" id="cb-"></li>
-                        <li>De frutas<input type="checkbox" name="" id="cb-"></li>
-                        <li>Sorvetes<input type="checkbox" name="" id="cb-"></li>
-                        <li>Cookies<input type="checkbox" name="" id="cb-"></li>
-                        <li>Docinhos<input type="checkbox" name="" id="cb-"></li>
-                        <li>Especiais<input type="checkbox" name="" id="cb-"></li> -->
+                    <li>Massas<input type="checkbox" name="" id="cb-"></li>
+                    <li>Cones<input type="checkbox" name="" id="cb-"></li>
+                    <li>De frutas<input type="checkbox" name="" id="cb-"></li>
+                    <li>Sorvetes<input type="checkbox" name="" id="cb-"></li>
+                    <li>Cookies<input type="checkbox" name="" id="cb-"></li>
+                    <li>Docinhos<input type="checkbox" name="" id="cb-"></li>
+                    <li>Especiais<input type="checkbox" name="" id="cb-"></li>
                 </ul>
+                <button type="button">Filtrar</button>
+                <!-- <div class="botao-filtrar">
+                </div> -->
             </div>
 
             <div class="produtos-meio">
@@ -122,7 +125,11 @@
             </div>
 
             <div class="produtos-direita">
-                <h2>Carrinho</h2>
+
+                <div>
+                    <h2>Carrinho</h2>
+                </div>
+
             </div>
         </main>
     </section>
