Adapatação do código

--- a/finalizar-compra.html
+++ b/finalizar-compra.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <div class="pedido-info">
+                <div class="pedido-info caixa">
 
                     <h3>Resumo do pedido</h3>
 
