--- a/produtos.html
+++ b/produtos.html
@@ -35,7 +35,7 @@
     <section>
         <main id="produtos" class="col">
 
-            <div class="produtos-esquerda">
+            <div class="produtos-esquerda caixa">
                 <div>
                     <h2>Filtro</h2>
                 </div>
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <div class="produtos-direita">
+            <div class="produtos-direita caixa">
 
                 <div>
                     <h2>Carrinho</h2>
