--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
                 <div class="col">
 
-                    <a href="#" class="botao"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
-                    <a href="produtos.html" class="botao"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
-                    <a href="sobre.html" class="botao"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+                    <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                    <a href="produtos.html" class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
+                    <a href="sobre.html" class="botao-geral"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
 
                 </div>
 
