--- a/produtos.html
+++ b/produtos.html
@@ -26,8 +26,8 @@
                 <h1>Doces Lunares</h1>
             </div>
             <div class="col">
-                <a href="#" class="botao"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
-                <a href="sobre.html" class="botao"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+                <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                <a href="sobre.html" class="botao-geral"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
             </div>
         </nav>
     </header>
@@ -61,7 +61,7 @@
             <div class="produtos-meio">
                 <div class="titulo-produtos">
                     <h2>TODOS</h2>
-                    <span class="botao"><img src="img/icon/icon-pesquisar.png" alt=""><input type="search"></span>
+                    <span class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt=""><input type="search"></span>
                 </div>
 
                 <div class="lista-produtos">
