--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
                 <h1>Doces Lunares</h1>
             </div>
             <div class="col">
-                <a href="#" class="botao"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
             </div>
         </nav>
     </header>
