--- a/finalizar-compra.html
+++ b/finalizar-compra.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doces Lunares</title>
+    <title>Finalizar Compra</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav-footer.css">
@@ -56,7 +56,7 @@
                     <div>
 
                         <label for="frete">Calcular frete:</label>
-                        <p class="botao"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
+                        <p class="botao-geral"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
                                 placeholder="0000-000"></p>
 
                     </div>
@@ -64,7 +64,7 @@
                     <div>
 
                         <label for="frete">Número da Casa:</label>
-                        <p class="botao"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
+                        <p class="botao-geral"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
                                 placeholder="0000"></p>
 
                     </div>
@@ -72,7 +72,7 @@
                     <div>
 
                         <label for="frete">Complemento:</label>
-                        <p class="botao"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
+                        <p class="botao-geral"><img src="img/icon/icon-mapa.png" alt=""><input type="search"
                                 placeholder="0000"></p>
 
                     </div>
@@ -80,7 +80,7 @@
                     <div>
 
                         <label for="frete">Cadastar cupom: </label>
-                        <p class="botao"><img src="img/icon/icon-cupom.png" alt=""><input type="search"
+                        <p class="botao-geral"><img src="img/icon/icon-cupom.png" alt=""><input type="search"
                                 placeholder="INAUG30"></p>
 
                     </div>
