Finalizado a página de detralhes doproduto

--- a/produto-selecionado.html
+++ b/produto-selecionado.html
@@ -36,9 +36,9 @@
 
                 <div class="col">
 
-                    <a href="#" class="botao"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
-                    <a href="produtos.html" class="botao"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
-                    <a href="sobre.html" class="botao"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+                    <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                    <a href="produtos.html" class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
+                    <a href="sobre.html" class="botao-geral"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
 
                 </div>
 
@@ -76,7 +76,7 @@
             <div class="preco-adicionar">
                 <p class="preco">Preço: R$7,50 cada 100g. (R$75,00 o kg)</p>
                 <div class="adicionar">
-                    <button class="botao-adicionar">EU QUEROOO!</button>
+                    <button class="botao-click">EU QUEROOO!</button>
                 </div>
             </div>
 
