--- a/login-cadastro.html
+++ b/login-cadastro.html
@@ -7,29 +7,118 @@
     <title>Login/Cadastrar</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login-cadastro.css">
+    <link rel="stylesheet" href="css/nav-footer.css">
 
 </head>
 
 <body>
-    <div class="caixa login-cadastro">
 
-        <form action="#" method="post">
+    <header>
+
+        <nav class="nav">
+
+            <div class="col">
+
+                <a href="#"><img src="img/logo/Logo.png" alt="Logo"></a>
+
+            </div>
+
+            <div class="col">
+
+                <h1>Doces Lunares</h1>
+
+            </div>
+
+            <div class="col">
+
+                <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
+                <a href="produtos.html" class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
+                <a href="sobre.html" class="botao-geral"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
+
+            </div>
+
+        </nav>
+
+
+    </header>
+
+    <div class="login-cadastro">
+        <form action="#" method="post" class="caixa">
             <h2>LOGIN</h2>
-            <span class="botao-geral"><img src="img/icon/icon-cupom.png" alt="">
+            <span class="botao-geral"><img src="img/icon/icon-email.png" alt="">
                 <input type="email" name="email" id="email" placeholder="Email" required>
             </span>
 
-            <span class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt="">
+            <span class="botao-geral"><img src="img/icon/icon-senha.png" alt="">
                 <input type="password" name="senha" id="senha" placeholder="Senha" required>
             </span>
 
-            <input type="button" value="Entrar" class="botao-geral">
+            <input type="submit" value="Entrar" class="botao-click">
 
+            <a href="#">Esqueceu sua senha?</a>
         </form>
 
-
-
+        <form action="#" method="post" class="caixa caixa-cadastro">
+            <h2>CADASTRAR</h2>
+            <!-- Nome -->
+            <span class="botao-geral"><img src="img/icon/icon-user.png" alt="">
+                <input type="text" placeholder="Nome" required>
+            </span>
+            <!-- Email -->
+            <span class="botao-geral"><img src="img/icon/icon-email.png" alt="">
+                <input type="email" name="email" id="email" placeholder="Email" required>
+            </span>
+            <!-- Senha -->
+            <span class="botao-geral"><img src="img/icon/icon-senha.png" alt="">
+                <input type="password" name="senha" id="senha" placeholder="Senha" required>
+            </span>
+            <!-- Confirmar Senha -->
+            <span class="botao-geral"><img src="img/icon/icon-senha.png" alt="">
+                <input type="password" name="senha" id="senha" placeholder="Confirmar Senha" required>
+            </span>
+            <!-- Cadastrar -->
+            <input type="submit" value="Cadastrar" class="botao-click">
+        </form>
     </div>
+
+    <footer class="footer">
+       
+        <div class="col">
+            <a href="#">
+                <img src="img/logo/Logo.png" alt="Logo">
+            </a>
+        </div>
+
+        <div class="col">
+
+            <h4>Local</h4>
+            <p>Rua dos Doceiros <br> 14512-957</p>
+
+        </div>
+
+        <div class="col">
+            <h4>Contato</h4>
+            <p>(19)3636-3636 <br> (19)99999-9999</p>
+        </div>
+
+        <div class="col">
+            <h4>Redes sociais</h4>
+
+            <div class="footer-sociais">
+                <a href="#"><img src="img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
+                <a href="#"><img src="img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
+                <a href="#"><img src="img/icon/Insta.png" alt="Contato atraves do Inta"></a>
+            </div>
+            
+        </div>
+
+        <div class="col">
+            <a href="sobre.html">
+                <h4>Quem somos</h4>
+            </a>
+        </div>
+
+    </footer>
 </body>
 
 </html>
