--- a/produto-selecionado.html
+++ b/produto-selecionado.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav-footer.css">
-
     <link rel="stylesheet" href="css/produto-selecionado.css">
 
 </head>
@@ -17,29 +16,22 @@
 <body>
 
     <main class="home">
-
         <header>
 
             <nav class="nav">
 
                 <div class="col">
-
                     <a href="#"><img src="img/logo/Logo.png" alt="Logo"></a>
-
                 </div>
 
                 <div class="col">
-
                     <h1>Doces Lunares</h1>
-
                 </div>
 
                 <div class="col">
-
                     <a href="#" class="botao-geral"><img src="img/icon/icon-carrinho.png" alt="">Carrinho</a>
                     <a href="produtos.html" class="botao-geral"><img src="img/icon/icon-pesquisar.png" alt="">Pesquisar</a>
                     <a href="sobre.html" class="botao-geral"><img src="img/icon/icon-quem-somos.png" alt="">Quem somos</a>
-
                 </div>
 
             </nav>
@@ -53,22 +45,19 @@
             <figure>
 
                 <div>
-                    <img class="caixa" src="img/produtos/TortaMorango.png" alt="Tora de morango">
+                    <img class="caixa caixa-produto" src="img/produtos/TortaMorango.png" alt="Tora de morango">
 
                     <div class="tags">
-
                         <span>Torta</span>
                         <span>Fruta</span>
                         <span>Morango</span>
                         <span>Massas</span>
-
                     </div>
 
                 </div>
 
                 <span>Essa torta consiste em um massa de biscoito de maizena, recheio de creme branco com pedaços de
                     morango, cobertura de calda de morango e morangos inteiros.
-
                 </span>
 
             </figure>
@@ -85,40 +74,29 @@
         <footer class="footer">
 
             <div class="col">
-
                 <a href="#">
-
                     <img src="img/logo/Logo.png" alt="Logo">
-
                 </a>
-
             </div>
 
             <div class="col">
-
                 <h4>Local</h4>
                 <p>Rua dos Doceiros <br> 14512-957</p>
-
             </div>
 
             <div class="col">
-
                 <h4>Contato</h4>
                 <p>(19)3636-3636 <br> (19)99999-9999</p>
-
             </div>
 
             <div class="col">
-
                 <h4>Redes sociais</h4>
-                <div class="footer-sociais">
 
+                <div class="footer-sociais">
                     <a href="#"><img src="img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
                     <a href="#"><img src="img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
                     <a href="#"><img src="img/icon/Insta.png" alt="Contato atraves do Inta"></a>
-
                 </div>
-
             </div>
 
             <div class="col">
@@ -126,13 +104,10 @@
                 <a href="sobre.html">
                     <h4>Quem somos</h4>
                 </a>
-
             </div>
 
         </footer>
-
     </main>
-
 </body>
 
 </html>
